--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
-    "tailwindcss": "^3.4.1"
+    "react-router-dom": "^6.21.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
